Made modal fixed, hid add button on modal toggle and disabled overflow toggle on modal toggle

--- a/src/components/modal/NewPasswordModal.scss
+++ b/src/components/modal/NewPasswordModal.scss
@@ -4,12 +4,10 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
-  height: 100vh;
-  z-index: 99;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
 }
 
 .New__Password__Modal {
